[package]
name = "memleak"
version = "0.1.0"
authors = ["lordnoriyuki <lordnoriyuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

winit = "0.22"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
futures = "0.3"
